--- a/.github/workflows/release-nocodb.yml
+++ b/.github/workflows/release-nocodb.yml
@@ -98,18 +98,18 @@ jobs:
 #       tag: ${{ needs.process-input.outputs.target_tag }}
 #       prev_tag: ${{ needs.process-input.outputs.prev_tag }}
 
-  # Build docker image and push to docker hub
-  release-docker:
-    needs: [release-draft-note, process-input]
-    uses: ./.github/workflows/release-docker.yml
-    with:
-      tag: ${{ needs.process-input.outputs.target_tag }}
-      targetEnv: ${{ github.event.inputs.targetEnv || 'PROD' }}
-    secrets:
-      DOCKERHUB_USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
-      DOCKERHUB_TOKEN: "${{ secrets.DOCKERHUB_TOKEN }}"
+#   # Build docker image and push to docker hub
+#   release-docker:
+#     needs: [release-draft-note, process-input]
+#     uses: ./.github/workflows/release-docker.yml
+#     with:
+#       tag: ${{ needs.process-input.outputs.target_tag }}
+#       targetEnv: ${{ github.event.inputs.targetEnv || 'PROD' }}
+#     secrets:
+#       DOCKERHUB_USERNAME: "${{ secrets.DOCKERHUB_USERNAME }}"
+#       DOCKERHUB_TOKEN: "${{ secrets.DOCKERHUB_TOKEN }}"
 
-  # Sync changes to develop
-  sync-to-develop:
-    needs: release-docker
-    uses: ./.github/workflows/sync-to-develop.yml
+#   # Sync changes to develop
+#   sync-to-develop:
+#     needs: release-docker
+#     uses: ./.github/workflows/sync-to-develop.yml
