--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -29,12 +29,16 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          
-      - run: |
+        
+      - name: get
+        id: get-sha
+        run: |
           echo 'triggering release-draft'
           echo ${{ github.event.inputs.tag || inputs.tag }}
           echo ${{ github.event.inputs.prev_tag || inputs.prev_tag }}
           echo $(git rev-parse HEAD~2)
+          TARGET_SHA=$(git rev-parse HEAD~2)
+          echo "::set-output name=TARGET_SHA::${TARGET_SHA}"
           
       - name: Create tag
         uses: actions/github-script@v3
@@ -45,7 +49,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               ref: "refs/tags/${{ github.event.inputs.tag || inputs.tag }}",
-              sha: "$(git rev-parse HEAD~2)"
+              sha: "${steps.get-sha.outputs.TARGET_SHA}"
             })
 
 
