--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -30,28 +30,28 @@ jobs:
         with:
           fetch-depth: 0
         
-      - name: get
-        id: get-sha
+      - name: Create tag
         run: |
           echo 'triggering release-draft'
           echo ${{ github.event.inputs.tag || inputs.tag }}
           echo ${{ github.event.inputs.prev_tag || inputs.prev_tag }}
           echo $(git rev-parse HEAD~2)
           TARGET_SHA=$(git rev-parse HEAD~2)
-          echo "::set-output name=TARGET_SHA::${TARGET_SHA}"
-          echo "${{steps.get-sha.outputs.TARGET_SHA}}"
-          
-      - name: Create tag
-        uses: actions/github-script@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: "refs/tags/${{ github.event.inputs.tag || inputs.tag }}",
-              sha: "${{steps.get-sha.outputs.TARGET_SHA}}"
-            })
+          # echo "::set-output name=TARGET_SHA::${TARGET_SHA}"
+          # echo "${{steps.get-sha.outputs.TARGET_SHA}}"
+          git tag -a "${{ github.event.inputs.tag || inputs.tag }}" ${TARGET_SHA} -m "${{ github.event.inputs.tag || inputs.tag }} Release"
+      
+      # - name: Create tag
+      #   uses: actions/github-script@v3
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     script: |
+      #       github.git.createRef({
+      #         owner: context.repo.owner,
+      #         repo: context.repo.repo,
+      #         ref: "refs/tags/${{ github.event.inputs.tag || inputs.tag }}",
+      #         sha: "${{steps.get-sha.outputs.TARGET_SHA}}"
+      #       })
 
 
     #   - uses: actions/setup-node@v2
