--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -39,6 +39,8 @@ jobs:
           TARGET_SHA=$(git rev-parse HEAD~2)
           # echo "::set-output name=TARGET_SHA::${TARGET_SHA}"
           # echo "${{steps.get-sha.outputs.TARGET_SHA}}"
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
           git tag -a "${{ github.event.inputs.tag || inputs.tag }}" ${TARGET_SHA} -m "${{ github.event.inputs.tag || inputs.tag }} Release"
       
       # - name: Create tag
