--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -42,6 +42,7 @@ jobs:
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git tag -a "${{ github.event.inputs.tag || inputs.tag }}" ${TARGET_SHA} -m "${{ github.event.inputs.tag || inputs.tag }} Release"
+          git push origin ${{ github.event.inputs.tag || inputs.tag }}
       
       # - name: Create tag
       #   uses: actions/github-script@v3
