--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -32,14 +32,15 @@ jobs:
           ref: ${{ github.ref }}
         
       - name: Create tag
+        id: get-sha
         run: |
           echo 'triggering release-draft'
           echo ${{ github.event.inputs.tag || inputs.tag }}
           echo ${{ github.event.inputs.prev_tag || inputs.prev_tag }}
           echo $(git rev-parse HEAD~2)
           TARGET_SHA=$(git rev-parse HEAD~2)
-          # echo "::set-output name=TARGET_SHA::${TARGET_SHA}"
-          # echo "${{steps.get-sha.outputs.TARGET_SHA}}"
+          echo "::set-output name=TARGET_SHA::${TARGET_SHA}"
+          echo "${{steps.get-sha.outputs.TARGET_SHA}}"
           # git config user.name "GitHub Actions Bot"
           # git config user.email "<>"
           # git tag -a "${{ github.event.inputs.tag || inputs.tag }}" ${TARGET_SHA} -m "${{ github.event.inputs.tag || inputs.tag }} Release"
@@ -54,7 +55,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               ref: "refs/tags/${{ github.event.inputs.tag || inputs.tag }}",
-              sha: $(git rev-parse HEAD~2)
+              sha: "${{steps.get-sha.outputs.TARGET_SHA}}"
             })
 
 
