--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -45,14 +45,27 @@ jobs:
           # git config user.email "<>"
           # git tag -a "${{ github.event.inputs.tag || inputs.tag }}" ${TARGET_SHA} -m "${{ github.event.inputs.tag || inputs.tag }} Release"
           # git push origin --tags
-      
-      
-      - uses: rickstaa/action-create-tag@v1
+            - name: Create tag
+            
+      - name: Push Tag
+        uses: actions/github-script@v3
         with:
-          tag: "${{ github.event.inputs.tag || inputs.tag }}"
-          message: "${{ github.event.inputs.tag || inputs.tag }} Release"
-          commit_sha: "${{steps.get-sha.outputs.TARGET_SHA}}"
           github_token: ${{ secrets.PAT }}
+          script: |
+            github.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: "refs/tags/${{ github.event.inputs.tag || inputs.tag }}",
+              sha: "${{steps.get-sha.outputs.TARGET_SHA}}"
+            })
+
+      
+      # - uses: rickstaa/action-create-tag@v1
+      #   with:
+      #     tag: "${{ github.event.inputs.tag || inputs.tag }}"
+      #     message: "${{ github.event.inputs.tag || inputs.tag }} Release"
+          # commit_sha: "${{steps.get-sha.outputs.TARGET_SHA}}"
+          # github_token: ${{ secrets.PAT }}
 
     #   - uses: actions/setup-node@v2
     #     with:
