--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -15,6 +15,7 @@ on:
 jobs:
   # Validate Branch
   validate-branch:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     steps:
       - run: |
