--- a/.github/workflows/update-sdk-path.yml
+++ b/.github/workflows/update-sdk-path.yml
@@ -9,6 +9,10 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+            node-version: 16.15.0
       - name: Checkout
         uses: actions/checkout@v2
         with:
