--- a/packages/nocodb/package.json
+++ b/packages/nocodb/package.json
@@ -151,6 +151,7 @@
     "nc-lib-gui": "0.84.12",
     "nc-plugin": "^0.1.1",
     "ncp": "^2.0.0",
+    "nocodb-sdk": "file:../nocodb-sdk",
     "nodemailer": "^6.4.10",
     "ora": "^4.0.4",
     "os-locale": "^5.0.0",
