--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -21,6 +21,9 @@ on:
         description: "Previous Tag"
         required: true
         type: string
+    secrets:
+      NC_GITHUB_TOKEN:
+        required: true
 
 jobs:
   build:
@@ -30,26 +33,23 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.ref }}
-        
-      - name: Create tag
+      - name: Get SHA
         id: get-sha
+        # If it's triggered by release-nocodb.yml, 
+        # the SHA from the third commit (i.e. Auto PR from master to develop) will be taken
+        # else HEAD will be taken
         run: |
-          echo 'triggering release-draft'
-          echo "github ref: ${{ github.ref }}"
-          echo ${{ github.event.inputs.tag || inputs.tag }}
-          echo ${{ github.event.inputs.prev_tag || inputs.prev_tag }}
-          echo $(git rev-parse HEAD~2)
           TARGET_SHA=$(git rev-parse HEAD~2)
+          if [[ ${{ github.event_name }} == 'workflow_dispatch' ]]; then
+            TARGET_SHA=$(git rev-parse HEAD)
+          fi
           echo "::set-output name=TARGET_SHA::${TARGET_SHA}"
-          echo "${{steps.get-sha.outputs.TARGET_SHA}}"
-          # git config user.name "GitHub Actions Bot"
-          # git config user.email "<>"
-          # git tag -a "${{ github.event.inputs.tag || inputs.tag }}" ${TARGET_SHA} -m "${{ github.event.inputs.tag || inputs.tag }} Release"
-          # git push origin --tags
-            
-      - name: Push Tag
+          echo "Setting TARGET_SHA: ${{steps.get-sha.outputs.TARGET_SHA}}"
+      - name: Create tag
         uses: actions/github-script@v3
         with:
+          # need workflows permission but it's not in GITHUB_TOKEN scope
+          # need a custom PAT with workflows permission here
           github-token: ${{ secrets.NC_GITHUB_TOKEN }}
           script: |
             github.git.createRef({
@@ -58,16 +58,7 @@ jobs:
               ref: "refs/tags/${{ github.event.inputs.tag || inputs.tag }}",
               sha: "${{steps.get-sha.outputs.TARGET_SHA}}"
             })
-
-      
-      # - uses: rickstaa/action-create-tag@v1
-      #   with:
-      #     tag: "${{ github.event.inputs.tag || inputs.tag }}"
-      #     message: "${{ github.event.inputs.tag || inputs.tag }} Release"
-          # commit_sha: "${{steps.get-sha.outputs.TARGET_SHA}}"
-          # github_token: ${{ secrets.PAT }}
-
-    #   - uses: actions/setup-node@v2
-    #     with:
-    #       node-version: 14
-    #   - run: "npx github-release-notes@0.17.2  release --token ${{ secrets.GITHUB_TOKEN }}  --draft --tags ${{ github.event.inputs.tag || inputs.tag }}..${{ github.event.inputs.prev_tag || inputs.prev_tag }}"
+#       - uses: actions/setup-node@v2
+#         with:
+#           node-version: 16
+#       - run: "npx github-release-notes@0.17.2  release --token ${{ secrets.GITHUB_TOKEN }}  --draft --tags ${{ github.event.inputs.tag || inputs.tag }}..${{ github.event.inputs.prev_tag || inputs.prev_tag }}"
