--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -41,8 +41,10 @@ jobs:
         run: |
           TARGET_SHA=$(git rev-parse HEAD~2)
           if [[ ${{ github.event_name }} == 'workflow_dispatch' ]]; then
+            echo "HERE .... : ${{ github.event_name }}"
             TARGET_SHA=$(git rev-parse HEAD)
           fi
+          echo "SHA: ${TARGET_SHA}"
           echo "::set-output name=TARGET_SHA::${TARGET_SHA}"
           echo "Setting TARGET_SHA: ${{steps.get-sha.outputs.TARGET_SHA}}"
       - name: Create tag
