--- a/.github/workflows/release-nocodb.yml
+++ b/.github/workflows/release-nocodb.yml
@@ -64,3 +64,5 @@ jobs:
     with:
       tag: ${{ needs.process-input.outputs.target_tag }}
       prev_tag: ${{ needs.process-input.outputs.prev_tag }}
+    secrets:
+      NC_GITHUB_TOKEN: "${{ secrets.NC_GITHUB_TOKEN }}"
