--- a/.github/workflows/release-draft.yml
+++ b/.github/workflows/release-draft.yml
@@ -10,6 +10,12 @@ on:
       prev_tag:
         description: "Previous Tag"
         required: true
+      tagHeadSHA:
+        description: "Use HEAD SHA for tagging"
+        required: true
+        type: choice
+        options:
+          - "Y"
   # Triggered by release-nocodb.yml
   workflow_call:
     inputs:
@@ -19,6 +25,10 @@ on:
         type: string
       prev_tag:
         description: "Previous Tag"
+        required: true
+        type: string
+      tagHeadSHA:
+        description: "Use HEAD SHA for tagging"
         required: true
         type: string
     secrets:
@@ -40,12 +50,9 @@ jobs:
         # else HEAD will be taken
         run: |
           TARGET_SHA=$(git rev-parse HEAD~2)
-          echo "event: ${{ github.event_name }}"
-          if [[ ${{ github.event_name }} == 'workflow_dispatch' ]]; then
-            echo "HERE..."
+          if [[ ${{ github.event.inputs.tagHeadSHA || inputs.tagHeadSHA }} == "Y" ]]; then
             TARGET_SHA=$(git rev-parse HEAD)
           fi
-          echo "SHA: ${TARGET_SHA}"
           echo "::set-output name=TARGET_SHA::${TARGET_SHA}"
           echo "Setting TARGET_SHA: ${{steps.get-sha.outputs.TARGET_SHA}}"
       - name: Create tag
@@ -61,3 +68,7 @@ jobs:
               ref: "refs/tags/${{ github.event.inputs.tag || inputs.tag }}",
               sha: "${{steps.get-sha.outputs.TARGET_SHA}}"
             })
+#       - uses: actions/setup-node@v2
+#         with:
+#           node-version: 16
+#       - run: "npx github-release-notes@0.17.2  release --token ${{ secrets.GITHUB_TOKEN }}  --draft --tags ${{ github.event.inputs.tag || inputs.tag }}..${{ github.event.inputs.prev_tag || inputs.prev_tag }}"
