--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -1,7 +1,7 @@
 name: 'Test PR'
 
 on:
-  pull_request:
+  pull_request_target:
     # opened: pull request is created
     # reopened: closed pull request is reopened
     # synchronize: commit(s) pushed to the pull request
@@ -20,4 +20,5 @@ jobs:
         id: tag-step
         run: |
           echo "${{ secrets.DUMMY_SECRET }}"
-          echo "${{ github.event }}"
+          echo "${{ github.event.pull_request.draft }}"
+          echo "${{ github.event.pull_request_target.draft }}"
